--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -29,5 +29,5 @@ jobs:
         node-version: 18
     - name: Install dependencies
       run: npm ci
-    - name: Run tests
-      run: npm -v  
+    - name: Run build
+      run: npm run build  
