--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -34,7 +34,7 @@ jobs:
     - name: Copy folder content recursively to remote VPS
       uses: garygrossgarten/github-action-scp@release
       with:
-          local: dev
+          local: dist
           remote: scp/directory
           host: ${{ secrets.HOST }}
           username: ${{ secrets.SSH_USER }}
