--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -40,7 +40,7 @@ jobs:
       uses: garygrossgarten/github-action-scp@release
       with:
           local: dist
-          remote: scp/directory
+          remote: /var/www/www.authentickidskills.com/public_html/
           host: ${{ secrets.HOST }}
           username: ${{ secrets.SSH_USER }}
           password: ${{ secrets.PASSWORD }}
