--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -21,7 +21,8 @@ jobs:
     #   with: 
     #     name: dist-web
     #     path: dist
-    
+    #     run: "sudo /bin/sh -c 'wget https://github.com/earthly/earthly/releases/download/v0.6.30/earthly-linux-amd64 -O /usr/local/bin/earthly && chmod +x /usr/local/bin/earthly'"
+
     - name: Copy folder content recursively to remote VPS
       uses: garygrossgarten/github-action-scp@release
       with:
